@@ -1,3 +1,11 @@
+2007-07-07  Thatcher Ulrich <tu@tulrich.com>
+	We don't use non-const references --> fix character::get_bound(),
+	matrix::transform(rect*), matrix::transform_by_inverse(rect*)
+	Added some convenience methods to rect.
+	A few whitespace edits.
+	* gameswf/*
+	* gameswf/Makefile: add as_broadcaster to the build
+
 2007-07-05  Vitaly Alexeev <tishka92@yahoo.com>
 
 	Fixed the hack, added erase(), push_back() & size() methods
